# witcher-character-quiz

./: DOCUMENTATION.md  Makefile  README.md  main.py  pyproject.toml  slides.md
data/raw/: witcher.jsonld
domain/: __init__.py  characters.py  factions.py  graph_builder.py  relations.py  traits.py
embeddings/: __init__.py  graph_visualizer.py  graphsage_trainer.py  hybrid_embeddings.py  node2vec_trainer.py  quality_analysis.py  text_encoder.py
notebooks/: exploration.ipynb
questionnaire/: __init__.py  loader.py  questionnaire.json  result_explainer.py  schema.py  transformer.py  user_embedding.py
scripts/: build_graph.py  export_embeddings.py  validate_consistency.py  visualize_graph.py
utils/: __init__.py  config.py  io.py
