[project]
name = "witcher-character-quiz"
version = "0.1.0"
description = "Domain modeling and embeddings groundwork for a Witcher character quiz."
authors = [
  { name = "Tomasz Makowski" },
  { name = "Adrian Jaśkowiec" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "networkx",
  "numpy",
  "pandas",
  "pydantic",
  "scikit-learn",
  "gensim",
  "matplotlib",
  "umap-learn",
]

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "pytest",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
  "domain*",
  "embeddings*",
  "questionnaire*",
  "utils*",
]
exclude = [
  "data*",
  "notebooks*",
  "scripts*",
]
